Closed Bug 106360 Opened 24 years ago Closed 23 years ago

charset parameter for external JS ignored

Categories

(Core :: Internationalization, defect)

x86
Windows 95
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9.6

People

(Reporter: bobj, Assigned: nhottanscp)

Details

Attachments

(2 files)

The charset parameter for external JS scripts seems to be ignored. E.g., <script language="JavaScript" src="isolatin1.js" charset="iso-8859-1"></script> or <script language="JavaScript" src="utf8.js" charset="utf-8"></script> It appears to ignore the charset parameter and assume the external JS script is in the same encoding as the HTML document. For the spec, see http://www.w3.org/TR/html4/interact/scripts.html#edef-SCRIPT I'll zip up my test cases and attach to this bug.
cc'd teruko
--> Internationalization Related to, or dupe of, one of these: bug 63626 bug 104209 bug 103954 bug 104227
Assignee: rogerl → yokoyama
Component: Javascript Engine → Internationalization
QA Contact: pschwartau → teruko
I would say bug 104227 seems the most similar -
This bug is about the charset parameter for the <script> tag used for EXTERNAL JS files which does not appear to be addressed by any of the other bugs E.g.: <script language="JavaScript" src="xx.js" CHARSET="iso-8859-1"></script> bug 63626 Requests that when there is an encoding mismatch, we provide some feedback about the error instead of silently failing. bug 104209 Not enough details in this report (e.g., encoding of .html and .js, parameters used by the <script> tag used). Marked dup of bug 63626. bug 103954 In this bug, both the .html and the .js are encoded in UTF-8. I'm not sure this is even an encoding problem. bug 104227 Related to HTML <Meta> tag and INLINE JS.
->nhotta
Assignee: yokoyama → nhotta
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.7
Target Milestone: mozilla0.9.7 → mozilla0.9.6
Depends on: 107610
Comment on attachment 55846 [details] [diff] [review] request->mElement->GetCharset(charset) succeeded but the returned value 'charset' was ignored, fixed that problem. r=ftang
Attachment #55846 - Flags: review+
Comment on attachment 55846 [details] [diff] [review] request->mElement->GetCharset(charset) succeeded but the returned value 'charset' was ignored, fixed that problem. sr=jst
Attachment #55846 - Flags: superreview+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
No longer depends on: 107610
Blocks: 107610
No longer blocks: 107610
Verified in 2001120108 Win32 build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: