Fixed a problem of a charset attribute for Script element is ignored, request->mElement->GetCharset(charset) succeeded but the returned value 'charset' was ignored, fixed that problem, bug 106360, r=ftang, sr=jst.